# dbtcore-bigquery

./: .env.example  .gitignore  .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/mart/: customer_order_totals.sql  customer_order_totals.yml  order_items.yml
models/semantic/time_spine/: time_spine.sql  time_spine.yml
models/staging/: stg_customers.md  stg_customers.sql  stg_locations.md  stg_order_items.md  stg_orders.md  stg_products.md  stg_supplies.md
seeds/: raw_stores.csv
snapshots/: stores_snapshot.sql
