[tool.poetry]
name = "dbtcore-bigquery"
version = "0.1.0"
description = "repositorio do projeto dbt com bigquery"
authors = ["Renato-Tecpel <renatolmb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dbt-core = "^1.10.13"
dbt-bigquery = "^1.10.2"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.2"
pre-commit = "^4.3.0"
sqlfluff-templater-dbt = "^3.4.2"

[tool.taskipy.tasks]
fix = "sqlfluff fix snapshots && sqlfluff fix models"
